--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "next",
     "build": "next build",
     "lint": "next lint",
-    "test": "next test"
+    "test": "next test",
+    "export": "next export"
   },
   "dependencies": {
     "next": "^12.0.4",
