--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-  "name": "use-cookie-consent-docs",
-  "version": "1.0.0",
-  "description": "Documentation for useCookieConsent hook",
-  "main": "index.js",
-  "repository": "https://github.com/use-cookie-consent/use-cookie-consent-docs",
-  "author": "Antoni Silvestrovic <antoni.silvestrovic@gmail.com>",
-  "license": "MIT",
+  "name": "@example/docs",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "lint": "next lint",
-    "test": "next test",
-    "export": "next export"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview"
   },
   "dependencies": {
-    "next": "^12.0.7",
-    "nextra": "^1.1.0",
-    "nextra-theme-docs": "^1.2.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@algolia/client-search": "^4.13.1",
+    "@docsearch/css": "^3.1.0",
+    "@docsearch/react": "^3.1.0",
+    "@types/react": "^17.0.45",
+    "preact": "^10.7.3",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.36",
-    "typescript": "^4.5.2"
+    "@astrojs/preact": "^0.5.2",
+    "@astrojs/react": "^0.4.2",
+    "@astrojs/tailwind": "^0.2.5",
+    "astro": "^1.0.0-rc.3"
   }
 }
